migration to java version 11 #patch